feat: 앨범 상세 조회 api 구현
Jira: S11P21A701-533